--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,5 +5,17 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_login">LoginActivity</string>
+    
+    <string name="SERVER">http://greatbrewers.com/services/json</string>
+    <string name="DOMAIN">greatbrewers.com</string>
+        
+    <!-- <string name="SERVER">http://bragasasesinas.zz.mu/services/json</string>
+    <string name="DOMAIN">bragasasesinas.zz.mu</string> -->
+        
+    <!-- DUDAS... -->
+    <string name="SESSION.LIFETIME">1209600</string>
+    <string name="API_KEY">1f295a2086335bb3199bd5294eef39ce</string>
+    <string name="ALGORITHM">HmacSHA256</string>
+    <string name="sharedpreferences_name">USER_AUTH</string>
 
 </resources>
