--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,12 +5,9 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_login">LoginActivity</string>
-    
-    <string name="SERVER">http://greatbrewers.com/services/json</string>
-    <string name="DOMAIN">greatbrewers.com</string>
         
-    <!-- <string name="SERVER">http://bragasasesinas.zz.mu/services/json</string>
-    <string name="DOMAIN">bragasasesinas.zz.mu</string> -->
+    <string name="SERVER">http://bragasasesinas.zz.mu/services/json</string>
+    <string name="DOMAIN">bragasasesinas.zz.mu</string> 
         
     <!-- DUDAS... -->
     <string name="SESSION.LIFETIME">1209600</string>
